[package]
name = "NicoVideoDownloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
m3u8-rs = "5.0.4"
regex = "1.9.1"
reqwest = {version = "0.11.18", features = ["cookies"] }
reqwest_cookie_store = "0.6.0"
scraper = "0.17.1"
tokio = { version = "1.29.1", features = ["full"] }
