[package]
name = "nicovideo_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m3u8-rs = "5.0.4"
reqwest = {version = "0.11.18", features = ["cookies", "json"] }
reqwest_cookie_store = "0.6.0"
scraper = "0.17.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
